# geometric_growth_models

./: .gitignore
aleatoric_regression/: Starter_Code.py
homoskedastic_regression/: demo.py  demo_daily.py  regression_with_weight_variance.py
rust/homoskedastic_regression/: Cargo.toml
rust/homoskedastic_regression/src/: analyzer.rs  main.rs
