[package]
name = "homoskedastic_regression"
version = "0.1.0"
edition = "2021"

[dependencies]
candle = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-nn" }
anyhow = "1.0"